Prevent horizontal scrolling

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,5 +1,9 @@
 /* This file is for your main application css. */
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     margin-top: 40px;
 }
